CSS fixes for tables on mobile

--- a/src/Components/BlueBucks/BlueBucks.css
+++ b/src/Components/BlueBucks/BlueBucks.css
@@ -138,7 +138,7 @@
 
     .tableFixHead {
         overflow-y: auto;
-        height: 45vh;
+        height: 50vh;
     }
 
         #crdbody {
@@ -152,7 +152,7 @@
 
     .tableFixHead {
         overflow-y: auto;
-        height: 58vh;
+        height: 56vh;
     }
 
     #crdbody {
@@ -165,7 +165,7 @@
 
     .tableFixHead {
         overflow-y: auto;
-        height: 58vh;
+        height: 52vh;
     }
 
     #crdbody {
